--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,8 +7,17 @@
 .rainbow-text {
 	@apply text-transparent bg-clip-text bg-gradient-to-r from-pry-dark to-pry-light;
 }
+
 .rainbow-bg {
 	@apply bg-gradient-to-r from-pry-dark to-pink-600;
+}
+
+.linear-grad-avanda-text {
+	background: linear-gradient(180deg, #6D28D9 0%, #D939CD 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	background-clip: text;
+	text-fill-color: transparent;
 }
 
 /* .page-enter-active,
